# leaf

./: .gitignore  LICENSE  NOTES.md  README.md  game_versions.json  game_versions.yaml  loader_versions.json  pyproject.toml  version_table.json
.github/workflows/: build.yml  rust.yml  test.yml
generator/: .gitignore  Cargo.toml  rustfmt.toml
generator/src/: constants.rs  generator.rs  main.rs  parser.rs  utils.rs
generator/src/models/: indexes.rs  launcher.rs  mod.rs  shared.rs  version.rs
generator/src/tests/: generator_test.rs  init.rs  mod.rs  parser_test.rs  test_constants.rs  utils_test.rs
indexes/client/linux/: 41.78.16.json
indexes/client/mac/: 41.78.16.json
indexes/client/win/: 41.78.16.json
indexes/server/common/: 41.78.16.json
indexes/server/linux/: 41.78.16.json
indexes/server/mac/: 41.78.16.json
indexes/server/win/: 41.78.16.json
loader/: leaf-installer.json
manifest/: version_manifest.json
manifests/: version_manifest.json
manifests/client/linux/: 41.78.16.json  42.0.0-unstable.25057.json  42.0.0-unstable.25072.json  42.0.0.25072-unstable.json  42.0.1-unstable.25246.json  42.0.2-unstable.25282.json  42.1.0-unstable.25882.json  42.1.1-unstable.25941.json  42.10.0-unstable.30053.json  42.11.0-unstable.30715.json  (+16 more)
manifests/win/: version_manifest.json
scripts/: generateCommonServerVersionManifest.py  generateIndexes.py  generateLeafJsonData.py  generateLeafServerData.py  generateLeafWindowsData.py  generateLeafWindowsServerData.py  generateWindowsClientVersionManifest.py  generateWindowsServerVersionManifest.py
scripts/generate-manifests/: Cargo.toml
scripts/generate-manifests/src/: main.rs
serverIndexes/win/: 41.78.16.json
serverManifests/common/: version_manifest.json
serverManifests/win/: version_manifest.json
src/: .gitignore
src/leaf/: .gitignore  README.md  constants.py  downloader.py  generator.py  main.py  models.py  parser.py  util.py
src/manifest-generator/: build.gradle  gradle.properties  settings.gradle
tools/: README.md  depotdownloader_runner.py  regex.txt
(+85 files in other folders)
