[project]
name = "generator"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argparse>=1.4.0",
    "dataclasses-json>=0.6.7",
    "deepmerge>=2.0",
    "loguru>=0.7.3",
    "project-paths>=1.1.1",
    "python-dotenv>=1.2.2",
]

[project.scripts]
main = "leaf.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/leaf"]

[tool.hatch.envs.default.scripts]
generate = "python src/leaf/main.py generate --manifests-file manifests.txt"
download = "python src/leaf/main.py download --manifests-file manifests.txt"
profile = "scalene run src/leaf/main.py generate --manifests-file manifests.txt"
test = "pytest"
lint = "ruff check src/leaf/"

# Stupid hack so I can run pytest and still resolve project path
[tool.project-paths]
root = "."

[dependency-groups]
dev = [
    "hatch>=1.16.5",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
    "scalene>=2.3.0",
]
