[package]
name = "leaf-generator"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base16ct = "0.3.0"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
indoc = "2.0.6"
regex = "1.11.3"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
strum = "0.27.2"
strum_macros = "0.27.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-test = "0.2.5"
walkdir = "2.5.0"
